<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/row_tv_account"
        style="@style/Table_Text_Numeric"
        android:text="@string/dialog_account"
        app:layout_constraintEnd_toStartOf="@+id/row_et_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/row_et_amount" />

    <EditText
        android:id="@+id/row_et_amount"
        style="@style/Table_Text_Numeric"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/row_tv_account"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/row_tv_cash"
        style="@style/Table_Text_Numeric"
        android:text="@string/dialog_cash"
        app:layout_constraintEnd_toStartOf="@+id/row_et_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row_et_amount" />

    <EditText
        android:id="@+id/row_et_cash"
        style="@style/Table_Text_Numeric"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/row_tv_account"
        app:layout_constraintTop_toBottomOf="@+id/row_et_amount" />

    <TextView
        android:id="@+id/row_tv_rest"
        style="@style/Table_Text_Numeric"
        android:text="@string/dialog_rest"
        app:layout_constraintEnd_toStartOf="@+id/row_et_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row_et_cash" />

    <EditText
        android:id="@+id/row_et_rest"
        style="@style/Table_Text_Numeric"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/row_tv_account"
        app:layout_constraintTop_toBottomOf="@+id/row_et_cash" />

</androidx.constraintlayout.widget.ConstraintLayout>